--- a/css/style.css
+++ b/css/style.css
@@ -95,9 +95,9 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
-
-.main .line .picture {
+.picture {
   padding: 10px 0px;
+  max-width: 100%;
 }
 
 .col {
@@ -114,9 +114,6 @@ body {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-top: calc(-1 * var(--bs-gutter-y));
-  margin-right: calc(-0.5 * var(--bs-gutter-x));
-  margin-left: calc(-0.5 * var(--bs-gutter-x));
 }
 
 .row .center {
@@ -147,5 +144,9 @@ body {
   border: 1px solid rgba(0, 0, 0, 0.125);
   border-radius: 0.1rem;
   font-family: Round;
+  max-width: 100%;
+}
+.logo{
+  max-width:100%;
 }
 /*# sourceMappingURL=style.css.map */
