--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,6 @@ body {
 }
 
 .main {
-  margin-top: 2vw;
   width: 100vw;
   max-width: 95%;
   font-family: Round;
@@ -45,11 +44,12 @@ body {
   display: -ms-flexbox;
   display: flex;
   font-size: 1.6vw;
-  margin: 0px 10px;
+  margin: 5px 10px;
 }
 
 .main .header .image {
   width: 6.5vw;
+  max-width: 100%;
   padding: 6.5px;
   background-color: #fff;
   border: 1.5px solid #fff;
@@ -58,7 +58,7 @@ body {
 
 .main .header .title {
   color: #fff;
-  font-size: 3.5vw;
+  font-size: 5vw;
   font-weight: 600;
   margin-right: auto;
   margin-left: auto;
@@ -67,9 +67,10 @@ body {
 .main .header .share {
   background-color: rgba(0, 255, 255, 0.856);
   color: #fff;
-  padding: 5px 20px;
+  padding: 1vw 2vw;
   border: none;
-  border-radius: 55px;
+  font-size: 2.5vw;
+  border-radius: 3vw;
   border: 2px solid rgba(0, 255, 255, 0.856);
 }
 
@@ -134,7 +135,7 @@ body {
   max-width: 100%;
   background-color: #fff;
   border-radius: 0.25rem;
-  margin: 18px 0px;
+  margin: 2vw 0vw;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
@@ -147,9 +148,9 @@ body {
 }
 
 .card .card-footer {
-  padding: 0.3rem 1rem;
+  padding: 0.7rem 1rem;
   background-color: rgba(157, 157, 157, 0.558);
-  font-size: 1.2vw;
+  font-size: 1.5vw;
   width: 100%;
   text-align: center;
   color: #6c757d;
@@ -165,15 +166,36 @@ img {
   max-width: 100%;
 }
 
-@media only screen and (max-width: 380px) {
+@media only screen and (max-width: 992px) {
   .main .body .row-cols > * {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 auto;
             flex: 0 0 auto;
     width: 50%;
   }
+  .main .body .row {
+    padding: 0px;
+  }
+  .main .header .image {
+    width: 12vw;
+  }
+  .main .header .title {
+    font-size: 7.5vw;
+  }
+  .main .header .share {
+    font-size: 4vw;
+    padding: 2vw 4vw;
+  }
   .card {
     margin: 10px 0px;
+    width: 40vw;
+  }
+  .card .card-footer {
+    font-size: 2.8vw;
+    padding: 2.1vw 1rem;
+  }
+  img {
+    width: 40vw;
   }
 }
 /*# sourceMappingURL=style.css.map */
