--- a/css/style.scss
+++ b/css/style.scss
@@ -105,4 +105,10 @@ body {
 	.card{
 		margin:10px 0px;
 	}
+	.card:hover > .card-footer {
+		transform: rotate(-45deg);
+		background-color: rgba(0, 255, 255, 0.856);
+		font-size: calc(20px + 5%);
+		height: 40px;
+	}
 }
